<resources>
    <string name="app_name">Good Pizza Great Pizza</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Id</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Your Name</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_address">Your Address</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_check">double check</string>
    <string name="action_request">sign up</string>
    <string name="action_sign_un">sign up</string>
</resources>